adding rez files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,8 @@ project(OpenSubdiv)
 
 cmake_minimum_required(VERSION 2.8.6)
 
+include(RezBuild)
+
 # Turn on folder support
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
