--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,6 @@ project(OpenSubdiv)
 
 cmake_minimum_required(VERSION 2.8.6)
 
-include(RezBuild)
-
 # Turn on folder support
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
@@ -293,22 +291,22 @@ option(GLEW_LOCATION "Path to GLEW" "")
 option(GLFW_LOCATION "Path to GLFW" "")
 
 option(NO_LIB "Disable the opensubdiv libs build (caveat emptor)" OFF)
-option(NO_EXAMPLES "Disable examples build" ON)
-option(NO_TUTORIALS "Disable tutorials build" ON)
-option(NO_REGRESSION "Disable regression tests build" ON)
+option(NO_EXAMPLES "Disable examples build" OFF)
+option(NO_TUTORIALS "Disable tutorials build" OFF)
+option(NO_REGRESSION "Disable regression tests build" OFF)
 option(NO_PTEX "Disable PTex support" OFF)
-option(NO_DOC "Disable documentation build" ON)
-option(NO_OMP "Disable OpenMP backend" ON)
+option(NO_DOC "Disable documentation build" OFF)
+option(NO_OMP "Disable OpenMP backend" OFF)
 option(NO_TBB "Disable TBB backend" OFF)
-option(NO_CUDA "Disable CUDA backend" ON)
-option(NO_OPENCL "Disable OpenCL backend" ON)
-option(NO_CLEW "Disable CLEW wrapper library" ON)
+option(NO_CUDA "Disable CUDA backend" OFF)
+option(NO_OPENCL "Disable OpenCL backend" OFF)
+option(NO_CLEW "Disable CLEW wrapper library" OFF)
 option(NO_OPENGL "Disable OpenGL support")
-option(NO_METAL "Disable Metal support" ON)
+option(NO_METAL "Disable Metal support" OFF)
 option(NO_DX "Disable DirectX support")
-option(NO_TESTS "Disable all tests" ON)
-option(NO_GLTESTS "Disable GL tests" ON)
-option(NO_GLFW "Disable components depending on GLFW" ON)
+option(NO_TESTS "Disable all tests")
+option(NO_GLTESTS "Disable GL tests")
+option(NO_GLFW "Disable components depending on GLFW" OFF)
 option(NO_GLFW_X11 "Disable GLFW components depending on X11" OFF)
 
 option(OPENSUBDIV_GREGORY_EVAL_TRUE_DERIVATIVES "Enable true derivative evaluation for Gregory basis patches" OFF)
@@ -586,7 +584,7 @@ if (WIN32)
             "environment variable."
         )
     endif()
-
+    
     # Link examples & regressions statically against Osd for
     # Windows until all the kinks can be worked out.
     if( OSD_GPU )
@@ -594,7 +592,7 @@ if (WIN32)
     else()
         set( OSD_LINK_TARGET osd_static_cpu )
     endif()
-
+    
 endif()
 
 
@@ -731,7 +729,7 @@ macro(_add_glfw_executable target folder)
     _add_possibly_cuda_executable(${target} ${folder} ${ARGN})
 
 #
-# manuelk : commenting this out as it seems to be causing more problems than
+# manuelk : commenting this out as it seems to be causing more problems than 
 # it is worth. Moving glfw as a native git recursive dependency will make this
 # redundant anyway.
 #
